--- a/app/src/main/res/layout/match_display.xml
+++ b/app/src/main/res/layout/match_display.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:elevation="4dp"
     app:cardCornerRadius="12dp"
+    app:cardBackgroundColor="@color/pale_green"
     android:layout_margin="5dp">
 
     <LinearLayout
