--- a/app/src/main/res/layout/fragment_chat_list.xml
+++ b/app/src/main/res/layout/fragment_chat_list.xml
@@ -5,33 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:layout_margin="15dp"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-
+        android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/text_view_chat_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/chat1"
-            android:textSize="32sp"
+            android:layout_weight="7"
+            android:text="Chats"
+            android:textSize="12pt"
             android:textStyle="bold"
-            android:textColor="@android:color/black" />
-
+            android:layout_gravity="center"
+            android:gravity="start"
+            android:layout_margin="15dp" />
 
         <Button
-            android:id="@+id/button_start_new_chat"
-            android:layout_width="wrap_content"
+            android:id="@+id/buttonNewChat"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/start_new_chat1"
-            android:padding="8dp"
-            android:onClick="onStartNewChatClick" />
+            android:layout_weight="4"
+            android:text="New Chat"
+            android:layout_margin="15dp"/>
 
     </LinearLayout>
 
