--- a/app/src/main/res/layout/fragment_view_profile.xml
+++ b/app/src/main/res/layout/fragment_view_profile.xml
@@ -69,22 +69,19 @@
 
     </LinearLayout>
 
-<!--    -->
-<!--    <Button-->
-<!--        android:id="@+id/addFriendButton"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="120dp"-->
-<!--        android:layout_marginTop="184dp"-->
-<!--        android:text="Add as Friend"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
     <Button
         android:id="@+id/buttonLogOut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Log Out"/>
+
+    <Button
+        android:id="@+id/buttonAddFriend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="Add Friend"
+        android:visibility="gone"/>
 
 </LinearLayout>
